oasis-build/tests/ui/bad_import.stderr
error: External type `serde_cbor::value::Value` must be defined in a service to use in an RPC interface.
 --> $DIR/bad_import.rs:9:63
  |
9 |     pub fn bad_import(&mut self, _ctx: &oasis_std::Context, arg: serde_cbor::Value) {}
  |                                                               ^^^^^^^^^^^^^^^^^

error: aborting due to previous error

